...
  return (
    <Modal
      animationType="slide"
      // transparent={true}
      visible={modalVisible}
    >
      <View className=" flex-1 bg-white" testID="policy_modal">
        <Header
          title={t("policy_modal.title") || "Privacy policy..."}
          leftBtn={
            <NavButton
              text={t("button.back") as string}
              onPress={() => setModalVisible(false)}
              withBackIcon
              testID="policy_modal_back_btn"
            />
          }
          containerStyle="mb-4"
        />
        <CustomActivityIndicator isVisible={isLoading} />
        {!isLoading ? (
...
