...
  return (
    <Modal
      animationType="slide"
      // transparent={true}
      visible={modalVisible}
    >
      <View className=" flex-1 bg-white" testID="terms_modal">
        <Header
          title={t("register_screen.terms_link") || "Privacy policy..."}
          leftBtn={
            <NavButton
              text={t("button.back") as string}
              onPress={() => setModalVisible(false)}
              withBackIcon
              testID="terms_modal_back_btn"
            />
          }
          containerStyle="mb-4"
        />
        <CustomActivityIndicator isVisible={isLoading} />
        {!isLoading ? (
...
